--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "formik-material-ui": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "socket.io": "^4.0.2",
     "socket.io-client": "^4.0.2",
     "web-vitals": "^1.1.2"
